--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
             <a class="navbar-brand" href="#">
                 <spam class="text-primary fs-5 fw-bold ">Sonrisas</spam>
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -44,8 +42,7 @@
                     </ul>
                 </ul>
                 <form class="d-flex">
-                    <input class="form-control me-2 " type="email " placeholder="Correo Electronico "
-                        aria-label="email ">
+                    <input class="form-control me-2 " type="email " placeholder="Correo Electronico " aria-label="email ">
                     <button class=" btn btn-primary btn-primary-outline-success " type="button "> ¡Contactanos!
                     </button>
                 </form>
@@ -56,12 +53,9 @@
     <!--Slider-->
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
-                aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
@@ -78,15 +72,13 @@
                 <div class="carousel-item">
                     <img src="Img/3.jpg" class="d-block w-100" title="!Haz tu Cita¡" alt="slider1">
             </a>
+            </div>
         </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-        data-bs-slide="prev">
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
     </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-        data-bs-slide="next">
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
     </button>
@@ -99,15 +91,10 @@
 
             <div class=" texto1 col-md-5 p-lg-5 mx-auto my-5">
                 <h1 class="display-4 font-weight-normal text-primary "> Bienvenido a Sonrisas</h1>
-                <p class=" text-justify  text-primary  "> En Odontología Sonrisas, contamos con un prestigioso equipo de
-                    especialistas en todas las áreas de la odontología, altamente calificado, idóneo y competitivo; que
-                    después de pasar un riguroso proceso de selección entra a ser parte del
-                    grupo. Nuestra misión es hacer de la odontología especializada una experiencia placentera y de
-                    primera calidad, orientada a preservar y rehabilitar la salud oral, manteniendo una estética
-                    natural, en un marco de seguridad y satisfacción.
+                <p class=" text-justify  text-primary  "> En Odontología Sonrisas, contamos con un prestigioso equipo de especialistas en todas las áreas de la odontología, altamente calificado, idóneo y competitivo; que después de pasar un riguroso proceso de selección entra a ser parte del
+                    grupo. Nuestra misión es hacer de la odontología especializada una experiencia placentera y de primera calidad, orientada a preservar y rehabilitar la salud oral, manteniendo una estética natural, en un marco de seguridad y satisfacción.
                     para los pacientes, con un talento humano idóneo y competitivo.</p>
-                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal"
-                    data-bs-whatever="@mdo">Contactanos</button>
+                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="@mdo">Contactanos</button>
             </div>
 
         </div>
@@ -269,19 +256,19 @@
     </section>
     <!--FORMULARIO-->
     <!--Fotter-->
-   
+
     <footer id="seccion-contacto " class="d-flex align-items-center justify-content-center">
         <div id="bg-contactos" class="position-absolute">
             <div class="w-100  ">
-                <p class="fs-5 px-3 pt-3 text-secondary">Sonrisas.SA &copy; Todos Los Derechos Reservados 2021</p>
+                <p class="fs-5 px-3 pt-3 text-secondary">Sonrisas.SA &copy;Derechos Reservados 2021</p>
                 <div id="iconos ">
                     <a href="# "><i class="bi bi-facebook "></i></a>
                     <a href="# "><i class="bi bi-twitter "></i></a>
                     <a href="# "><i class="bi bi-instagram "></i></a>
                 </div>
             </div>
-           
-            
+
+
         </div>
         <svg xmlns="http://www.w3.org/2000/svg " viewBox="0 0 1440 320 ">
             <path fill="#1b2a4e " fill-opacity="1 " d="M0,32L120,42.7C240,53,480,75,720,74.7C960,75,1200,53,1320,42.7L1440,32L1440,320L1320,320C1200,320,960,320,720,320C480,320,240,320,120,320L0,320Z ">
@@ -289,7 +276,7 @@
             </path>
         </svg>
     </footer>
-        <!--Fotter-->
+    <!--Fotter-->
 </body>
 
 </html>
