Jesus vales Huevo

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
     <footer id="seccion-contacto " class="d-flex align-items-center justify-content-center">
         <div id="bg-contactos" class="position-absolute">
             <div class="w-100  ">
-                <p class="fs-5 px-3 pt-3 text-secondary">Sonrisas.SA &copy;Derechos Reservados 2021</p>
+                <p class="fs-5 px-3 pt-3 text-secondary">Sonrisas.SA &copy; Todos Los Derechos Reservados 2021</p>
                 <div id="iconos ">
                     <a href="# "><i class="bi bi-facebook "></i></a>
                     <a href="# "><i class="bi bi-twitter "></i></a>
