--- a/Html/sedes.html
+++ b/Html/sedes.html
@@ -49,6 +49,45 @@
         </div>
     </nav>
 
+    <div class="container">
+
+        <H1>Cra 91 No. 71 - 40</H1>
+
+        <div class="">
+            <div class="ratio ratio-16x9">
+
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3916.2396521359087!2d-74.81723728466498!3d11.02063765765071!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8ef42db82f8478dd%3A0x330f15b1a678439!2sCl.%2091%20%2371-40%2C%20Barranquilla%2C%20Atl%C3%A1ntico!5e0!3m2!1ses-419!2sco!4v1632341490638!5m2!1ses-419!2sco"
+                    width="300" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            </div>
+        </div>
+
+        <div class="row d-flex justify-content-around">
+
+            <div class="col-lg-5">
+                <div class="card p-3">
+                    <img class="card-img-top" src="/Img/sede_baq.jpg" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Sede Barranquilla</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                            card's content.</p>
+                    </div>
+                </div>
+            </div>
+            
+            <div class="col-lg-5">
+                <div class="card p-3">
+                    <img class="card-img-top" src="/Img/sede_cartagena.jpg" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Sede Cartagena</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                            card's content.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+    </div>
 
     <footer id="seccion-contacto " class="d-flex align-items-center justify-content-center">
         <div id="bg-contactos" class="position-absolute">
