--- a/Html/quienessomos.html
+++ b/Html/quienessomos.html
@@ -13,7 +13,7 @@
 <body>
     <nav class="navbar navbar-expand-lg border navbar-light bg-light" id="menu">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="../Index.html">
                 <spam class="text-primary fs-5 fw-bold ">Sonrisas</spam>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,7 +32,7 @@
                             <a class="nav-link " href="../Html/sedes.html">Sedes</a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link " href="../Html/quienessomos.html">¿Quienes Somos?</a>
+                            <a class="nav-link " href="../Html/quienessomos.html">Nosotros</a>
                         </li>
                         <li class="nav-item ">
                             <a class="nav-link " href="../Html/comentarios.html">Comentarios</a>
@@ -48,50 +48,100 @@
             </div>
         </div>
     </nav>
-
-    <div class="container">
-        <div class="row mt-3">
-            <div class="col-lg-6 mb-2">
-                <div class="ratio ratio-16x9">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/C_S8pmC2KMI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <section class="py-5 text-center container">
+        <h1 class="display-4 font-weight-normal text-white bg-primary rounded pb-md-2">NOSOTROS</h1>
+    </section>
+    <section class="py-5 text-center container">
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+                <div class="card h-100">
+                    <img src="../Img/quienessomos.jpeg " class="card-img-top" alt="">
+                    <div class="card-body">
+                        <h5 class="card-title  ">¿QUIENES SOMOS?</h5>
+                        <p class="card-text text-body  ">Somos una empresa que ofrece servicios de odontología general y especializada ubicada en las ciudades de Barranquilla y Cartagena. Prestando nuestros servicios a las familias de la Región Caribe. Contamos con instalaciones habilitadas
+                            ante secretaria de salud, y brindamos seguridad y confianza a nuestros pacientes. </p>
+                    </div>
+                    <div class="card-footer">
+                    </div>
                 </div>
             </div>
-            <div class="col-lg-6">
-                <div class="ratio ratio-16x9">
-                    
-                <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2329.005997790867!2d-74.79210766357723!3d10.970498528414037!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8ef42d5b40a17659%3A0x9fbbed78395ff0e2!2sCl.%2047%20%2327-6%2C%20Barranquilla%2C%20Atl%C3%A1ntico!5e0!3m2!1ses!2sco!4v1632264716971!5m2!1ses!2sco"
-                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy">
-            </iframe>
+            <div class="col">
+                <div class="card h-100 border-light mb-3">
+                    <img src="../Img/Mision.jpg" class="card-img-top" alt="">
+                    <div class="card-body">
+                        <h5 class="card-title  ">MISIÓN</h5>
+                        <p class="card-text text-body "> Brindar atención dental de calidad y un servicio amigable y personalizado, a todas aquellas personas que nos confían su mejor expresión Sonrisas conformada por un calificado staff de odontólogos de reconocido prestigio con más
+                            de 20 años de experiencia profesional graduados de las mejores Universidades de Colombia Nuestro objetivo es brindar calidez humana y satisfacción a nuestros pacientes proporcionándoles una atención en horarios cómodos a través
+                            de citas concertadas telefónicamente. Proyectamos nuestro crecimiento sin franquiciar la marca, priorizando y resguardando la mantención de los principales valores y políticas diferenciadores de la empresa, a través de una
+                            administración única, cercana y controlada, valorando a cada uno de nuestros pacientes, de la misma manera que valoramos a nuestro equipo de odontólogos, y a nuestro equipo técnico y administrativo.</p>
+                    </div>
+                    <div class="card-footer">
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100 border-light mb-3">
+                    <img src="..//Img/Vision.jpg " class="card-img-top" alt="">
+                    <div class="card-body">
+                        <h5 class="card-title  ">VISIÓN</h5>
+                        <p class=" text-justify text-body">
+                            Ser una clínica dental de vanguardia conformada por un equipo de odontólogos de primer nivel, comprometidos con su actualización continua, beneficiando de esta manera a todas las personas que nos confía su salud dental. Sonrisas, fomenta a todo su personal,
+                            staff de odontólogos, personal administrativo, asistentas dentales y técnicos en laboratorio dental, nuestros principales valores, honestidad, laboriosidad, lealtad y respeto.</p>
+                        </p>
+                    </div>
+                    <div class="card-footer">
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100 border-light mb-3">
+                    <img src="../Img/valores.jpeg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">VALORES</h5>
+                        <p class="card-text text-body">Sonrisas, fomenta a todo su personal, staff de odontólogos, personal administrativo, asistentas dentales y técnicos en laboratorio dental, nuestros principales valores, honestidad, laboriosidad, lealtad y respeto.</p>
+                    </div>
+                    <div class="card-footer">
+                    </div>
+                </div>
+            </div>
+            <div class="col ">
+                <div class="card h-100 border-light mb-3 ">
+                    <img src="../Img/Respnsabilidad.jpeg " class="card-img-top " alt="... ">
+                    <div class="card-body ">
+                        <h5 class="card-title ">RESPONSABILIDAD SOCIAL PRISMA DENTAL</h5>
+                        <p class="card-text text-body ">Sonrisas, esta comprometido con la bioecologia al no utilizar elementos, que contaminen nuestro frágil medio ambiente, así como también, con nuestra participación en campañas, programas sociales tanto para niños mujeres y especialmente
+                            al adulto mayor.</p>
+                    </div>
+                    <div class="card-footer ">
+                    </div>
                 </div>
             </div>
         </div>
-        <section class="py-5 text-center container">
-
-            <h1 class="display-4 font-weight-normal text-white bg-primary rounded pb-md-2">¿quienes somos?</h1>
-            <div class=" border position-relative overflow-hidden pb-md-2 m-md-1 text-center bg-light" id="box">
-                <div class=" texto1 col-md-5 p-lg-5 mx-auto my-5">
-                    <p class=" text-justify  text-primary  ">
-                        somos una compañia que se especializa en odontoligia. <br> 
-                        estamos dispuestos a manejar cualquier problema que tengas con los dientes, y te aseguro que tus dientes lo agradeceran. <br>
-                        estamos capacitados para tratar a todo tipo de pacientes, desde un niño con sus delicados dientes hasta la mandibula de los moustros de cualquier historia mitologica
-                    </p>
+    </section>
+    <div class="container ">
+        <div class="row mt-3 ">
+            <div class="col-lg-6 mb-2 border-light mb-3  " style="max-width: 120rem ">
+                <div class="ratio ratio-16x9 ">
+                    <iframe width="560 " height="315 " src="https://www.youtube.com/embed/C_S8pmC2KMI " title="YouTube video player " frameborder="0 " allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture " allowfullscreen></iframe>
                 </div>
-        </section>
+            </div>
+
+        </div>
     </div>
 
-    <footer id="seccion-contacto " class="d-flex align-items-center justify-content-center">
+
+    </div>
+
+    <footer id="seccion-contacto " class="d-flex align-items-center justify-content-center" style="background: rgb(150, 150, 150, 0.7)">
         <div id="bg-contactos" class="position-absolute">
             <div class="w-100  ">
                 <p class="fs-5 px-3 pt-3 text-secondary">Sonrisas.SA &copy; Todos Los Derechos Reservados 2021</p>
                 <div id="iconos ">
-                    <a href="# "><i class="bi bi-facebook "></i></a>
+                    <a href="# "><i class="bi bi-facebook "><s></s></i></a>
                     <a href="# "><i class="bi bi-twitter "></i></a>
                     <a href="# "><i class="bi bi-instagram "></i></a>
                 </div>
             </div>
-
-
         </div>
         <svg xmlns="http://www.w3.org/2000/svg " viewBox="0 0 1440 320 ">
             <path fill="#1b2a4e " fill-opacity="1 " d="M0,32L120,42.7C240,53,480,75,720,74.7C960,75,1200,53,1320,42.7L1440,32L1440,320L1320,320C1200,320,960,320,720,320C480,320,240,320,120,320L0,320Z ">
@@ -99,6 +149,10 @@
             </path>
         </svg>
     </footer>
+    <!--Footer-->
+</body>
+
+</html>
 </body>
 
 </html>
