--- a/Html/reserva.html
+++ b/Html/reserva.html
@@ -13,7 +13,7 @@
     <!--Nav-->
     <nav class="navbar navbar-expand-lg border navbar-light bg-light" id="menu">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="../Index.html">
                 <spam class="text-primary fs-5 fw-bold ">Sonrisas</spam>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,7 +32,7 @@
                             <a class="nav-link " href="../Html/sedes.html">Sedes</a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link " href="../Html/quienessomos.html">¿Quienes Somos?</a>
+                            <a class="nav-link " href="../Html/quienessomos.html">Nosotros</a>
                         </li>
                         <li class="nav-item ">
                             <a class="nav-link " href="../Html/comentarios.html">Comentarios</a>
@@ -47,82 +47,59 @@
             </div>
         </div>
     </nav>
+    <div class=" border position-relative overflow-hidden pb-md-2 m-md-1 text-center bg-light " id="box ">
+
+
+        <div class=" texto1 col-md-5 p-lg-5 mx-auto my-5 ">
+            <h1 class="display-4 font-weight-normal text-primary "> Membresía Oral Pass</h1>
+            <p class=" text-justify text-primary "> En nuestra Clínica Odontológica Sonrisas nos preocupamos por tu salud bucal y la de toda tu familia. Por ello te ofrecemos una membresía familiar para que gocen de grandes beneficios por un 1 año. Te invitamos a ser parte de un selecto grupo
+                de pacientes, que pueden acceder a nuestra Clínica Sonrisas en sus diferentes sedes (Barranquilla-Cartagena) y por consiguiente disfrutar de un trato preferencial. ¿Cómo funciona? Al momento de tu afiliación te entregaremos una tarjeta
+                que acredita, a tu familia y a ti, como miembros del programa Oral Pass. Una vez afiliado, espera 24 horas; después puedes acercarte a cualquier sede y presentar tu tarjeta para disfrutar de todos los beneficios.</p>
+        </div>
+
+    </div>
+
     <section class="py-5 text-center container">
         <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
-            <h1 class="display-4 fw-normal text-primary">¡APARTA TU CITA YA MISMO!</h1>
-            <p class="fs-5 text-muted">Precios espectacular.</p>
+            <h1 class="display-4 fw-normal text-primary">¡ADQUIERE TU MEMBRESIA YA MISMO!</h1>
+            <p class="fs-5 text-muted">Nuestra Membresias Por Un Precio Expectacular.</p>
         </div>
         </header>
 
         <main>
-            <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
-                <div class="col">
-                    <div class="card mb-4 rounded-3 shadow-sm">
-                        <div class="card-header py-3">
-                            <h4 class="my-0 fw-normal text-primary ">Ortodoncia</h4>
-                        </div>
-                        <div class="card-body">
-                            <h1 class="card-title pricing-card-title">$0<small class="text-muted fw-light"></small></h1>
-                            <ul class="list-unstyled mt-3 mb-4">
-                                <li> </li>
-                                <li> </li>
-                                <li></li>
-                                <li></li>
-                            </ul>
-                            <button type="button" class="w-100 btn btn-lg btn-outline-primary">¡Hacer Cita!</button>
-                        </div>
+
+            <div class="col">
+                <div class="card mb-4 rounded-3 shadow-sm">
+                    <div class="card-header py-3">
+                        <h4 class="my-0 fw-normal">Membresía Oral Pass</h4>
                     </div>
-                </div>
-                <div class="col">
-                    <div class="card mb-4 rounded-3 shadow-sm">
-                        <div class="card-header py-3">
-                            <h4 class="my-0 fw-normal">Blanqueamiento</h4>
-                        </div>
-                        <div class="card-body">
-                            <h1 class="card-title pricing-card-title">$15<small class="text-muted fw-light"></small></h1>
-                            <ul class="list-unstyled mt-3 mb-4">
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                            </ul>
-                            <button type="button" class="w-100 btn btn-lg btn-primary">¡Hacer Cita!</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card mb-4 rounded-3 shadow-sm border-primary">
-                        <div class="card-header py-3 text-white bg-primary border-primary">
-                            <h4 class="my-0 fw-normal">Implantes</h4>
-                        </div>
-                        <div class="card-body">
-                            <h1 class="card-title pricing-card-title">$29<small class="text-muted fw-light"></small></h1>
-                            <ul class="list-unstyled mt-3 mb-4">
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                            </ul>
-                            <button type="button" class="w-100 btn btn-lg btn-primary">¡Hacer Cita!</button>
-                        </div>
+                    <div class="card-body">
+                        <h1 class="card-title pricing-card-title">$79,999$/Anual<small class="text-muted fw-light"></small></h1>
+                        <ul class="list-unstyled mt-3 mb-4">
+                            <h5>Beneficios</h5>
+                            <li>Tarifas preferenciales en todos los procedimientos</li>
+                            <li>Examen, diagnóstico y/o consulta con odontólogo general o especialista sin ningún costo.</li>
+                            <li>50% de descuento en limpieza dental</li>
+                            <li>Descuentos en ayudas diagnósticas</li>
+                            <li>3 urgencias odontológicas al año.</li>
+                        </ul>
+                        <button type="button" class="w-100 btn btn-lg btn-primary">¡Adquirir Membresia!</button>
                     </div>
                 </div>
             </div>
+
+            </div>
     </section>
-
-
-    <footer id="seccion-contacto " class="d-flex align-items-center justify-content-center">
+    <footer id="seccion-contacto " class="d-flex align-items-center justify-content-center" style="background: rgb(150, 150, 150, 0.7)">
         <div id="bg-contactos" class="position-absolute">
             <div class="w-100  ">
                 <p class="fs-5 px-3 pt-3 text-secondary">Sonrisas.SA &copy; Todos Los Derechos Reservados 2021</p>
                 <div id="iconos ">
-                    <a href="# "><i class="bi bi-facebook "></i></a>
+                    <a href="# "><i class="bi bi-facebook "><s></s></i></a>
                     <a href="# "><i class="bi bi-twitter "></i></a>
                     <a href="# "><i class="bi bi-instagram "></i></a>
                 </div>
             </div>
-
-
         </div>
         <svg xmlns="http://www.w3.org/2000/svg " viewBox="0 0 1440 320 ">
             <path fill="#1b2a4e " fill-opacity="1 " d="M0,32L120,42.7C240,53,480,75,720,74.7C960,75,1200,53,1320,42.7L1440,32L1440,320L1320,320C1200,320,960,320,720,320C480,320,240,320,120,320L0,320Z ">
@@ -130,6 +107,13 @@
             </path>
         </svg>
     </footer>
+    <!--Footer-->
+</body>
+
+</html>
+</body>
+
+</html>
 </body>
 
 </html>
