--- a/Html/sedes.html
+++ b/Html/sedes.html
@@ -7,13 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../Css/bootstrap.css">
     <script type="text/javascript" src="../Js/bootstrap.js"></script>
+    <script src="https://kit.fontawesome.com/43e07837e8.js" crossorigin="anonymous"></script>
     <title>Nuestras Sedes</title>
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg border navbar-light bg-light" id="menu">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="../Index.html">
                 <spam class="text-primary fs-5 fw-bold ">Sonrisas</spam>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,7 +33,7 @@
                             <a class="nav-link " href="../Html/sedes.html">Sedes</a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link " href="../Html/quienessomos.html">¿Quienes Somos?</a>
+                            <a class="nav-link " href="../Html/quienessomos.html">Nosotros</a>
                         </li>
                         <li class="nav-item ">
                             <a class="nav-link " href="../Html/comentarios.html">Comentarios</a>
@@ -50,57 +51,56 @@
     </nav>
 
     <div class="container">
-
-        <H1>Cra 91 No. 71 - 40</H1>
-
-        <div class="">
-            <div class="ratio ratio-16x9">
-
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3916.2396521359087!2d-74.81723728466498!3d11.02063765765071!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8ef42db82f8478dd%3A0x330f15b1a678439!2sCl.%2091%20%2371-40%2C%20Barranquilla%2C%20Atl%C3%A1ntico!5e0!3m2!1ses-419!2sco!4v1632341490638!5m2!1ses-419!2sco"
-                    width="300" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <section class="py-5 text-center container">
+            <h1 class="display-4 font-weight-normal text-white bg-primary rounded pb-md-2">SEDES</h1>
+            <div class="card p-3 card border-light mb-3" style="max-width: 120rem; ">
+                <div class="ratio ratio-16x9">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3916.2396521359087!2d-74.81723728466498!3d11.02063765765071!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8ef42db82f8478dd%3A0x330f15b1a678439!2sCl.%2091%20%2371-40%2C%20Barranquilla%2C%20Atl%C3%A1ntico!5e0!3m2!1ses-419!2sco!4v1632341490638!5m2!1ses-419!2sco"
+                        width="300" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                </div>
             </div>
-        </div>
-
+        </section>
         <div class="row d-flex justify-content-around">
 
             <div class="col-lg-5">
-                <div class="card p-3">
-                    <img class="card-img-top" src="/Img/sede_baq.jpg" alt="Card image cap">
+                <div class="card p-3 card border-light mb-3" style="max-width: 70rem; ">
+                    <img class="card-img-top" src="../Img/Sedebarranquilla.jpeg" alt="Card image cap">
                     <div class="card-body">
-                        <h5 class="card-title">Sede Barranquilla</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                            card's content.</p>
+                        <h5 class="card-title"><i class="fas fa-location-arrow"></i> Sede Barranquilla</h5>
+                        <p class="card-text"><i class="fas fa-phone"></i> 7341777</p>
+                        <p class="card-text"><i class="fas fa-mobile"></i> 3103816519</p>
+                        <p class="card-text"><i class="far fa-clock"></i> Lu-Vi:8:00 a.m a 12:30/2:00 p.m a 6:00 p.m</p>
+                        <p class="card-text"><i class="far fa-clock"></i> Sabados 08:00 am a 01:00pm</p>
+                        <p class="card-text"><i class="fas fa-street-view"></i> Carrera 14 No. 7 Norte 54 Frente al bar</p>
                     </div>
                 </div>
             </div>
-            
+
             <div class="col-lg-5">
-                <div class="card p-3">
-                    <img class="card-img-top" src="/Img/sede_cartagena.jpg" alt="Card image cap">
+                <div class="card p-3 card border-light mb-3" style="max-width: 70rem; ">
+                    <img class="card-img-top" src="/Img/sedecartagena.jpg" alt="Card image cap">
                     <div class="card-body">
-                        <h5 class="card-title">Sede Cartagena</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                            card's content.</p>
+                        <h5 class="card-title "><i class="fas fa-location-arrow"></i> Sede Cartagena</h5>
+                        <p class="card-text"><i class="fas fa-phone"></i> 7341777</p>
+                        <p class="card-text"><i class="fas fa-mobile"></i> 3103816519</p>
+                        <p class="card-text"><i class="far fa-clock"></i> Lu-Vi: 09:00 a.m a 7:30pm </p>
+                        <p class="card-text"><i class="far fa-clock"></i> Sabados 08:00 am a 02:00pm</p>
+                        <p class="card-text"><i class="fas fa-street-view"></i> Av Calle 19 No 288 </p>
                     </div>
                 </div>
             </div>
         </div>
-        
     </div>
-
-    <footer id="seccion-contacto " class="d-flex align-items-center justify-content-center">
+    <footer id="seccion-contacto " class="d-flex align-items-center justify-content-center" style="background: rgb(150, 150, 150, 0.7)">
         <div id="bg-contactos" class="position-absolute">
             <div class="w-100  ">
                 <p class="fs-5 px-3 pt-3 text-secondary">Sonrisas.SA &copy; Todos Los Derechos Reservados 2021</p>
                 <div id="iconos ">
-                    <a href="# "><i class="bi bi-facebook "></i></a>
+                    <a href="# "><i class="bi bi-facebook "><s></s></i></a>
                     <a href="# "><i class="bi bi-twitter "></i></a>
                     <a href="# "><i class="bi bi-instagram "></i></a>
                 </div>
             </div>
-
-
         </div>
         <svg xmlns="http://www.w3.org/2000/svg " viewBox="0 0 1440 320 ">
             <path fill="#1b2a4e " fill-opacity="1 " d="M0,32L120,42.7C240,53,480,75,720,74.7C960,75,1200,53,1320,42.7L1440,32L1440,320L1320,320C1200,320,960,320,720,320C480,320,240,320,120,320L0,320Z ">
@@ -108,6 +108,10 @@
             </path>
         </svg>
     </footer>
+    <!--Footer-->
+</body>
+
+</html>
 
 </body>
 
