--- a/Html/servicios.html
+++ b/Html/servicios.html
@@ -13,12 +13,10 @@
 <body>
     <nav class="navbar navbar-expand-lg border navbar-light bg-light" id="menu">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="../Index.html">
                 <spam class="text-primary fs-5 fw-bold ">Sonrisas</spam>
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -34,7 +32,7 @@
                             <a class="nav-link " href="../Html/sedes.html">Sedes</a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link " href="../Html/quienessomos.html">¿Quienes Somos?</a>
+                            <a class="nav-link " href="../Html/quienessomos.html">Nosotros</a>
                         </li>
                         <li class="nav-item ">
                             <a class="nav-link " href="../Html/comentarios.html">Comentarios</a>
@@ -43,14 +41,221 @@
                     </ul>
                 </ul>
                 <form class="d-flex">
-                    <input class="form-control me-2 " type="email " placeholder="Correo Electronico "
-                        aria-label="email ">
+                    <input class="form-control me-2 " type="email " placeholder="Correo Electronico " aria-label="email ">
                     <button class=" btn btn-primary btn-primary-outline-success " type="button "> ¡Contactanos!
                     </button>
                 </form>
             </div>
         </div>
     </nav>
+    <div class=" border position-relative overflow-hidden pb-md-2 m-md-1 text-center bg-light " id="box ">
+
+        <section class="py-5 text-center container ">
+            <h1 class="display-4 font-weight-normal text-white bg-primary rounded pb-md-2 ">SERVICIOS QUE OFRECEMOS</h1>
+        </section>
+
+        <div class=" texto1 col-md-5 p-lg-5 mx-auto my-5 ">
+            <h1 class="display-4 font-weight-normal text-primary "> Servicios</h1>
+            <p class=" text-justify text-primary "> Queremos que sepas todo sobre tu tratamiento y acompañarte desde la primera cita, por eso contamos con un equipo de especialistas en el mismo lugar para facilitar y agilizar tu tratamiento. Conoce nuestros servicios, agenda tu cita y da el
+                primer paso para tu sonrisa soñada.</p>
+        </div>
+
+    </div>
+
+
+    <section class="py-5 text-center container ">
+        <div class="row row-cols-1 row-cols-md-3 g-4 ">
+            <div class="col ">
+                <div class="card card border-light mb-3 ">
+                    <img src=" " class="card-img-top " alt="... ">
+                    <div class="card-body ">
+                        <h5 class="card-title ">DISEÑO DE SONRISA</h5>
+                        <p class="card-text ">“Limpiar, blanquear dientes y mejorar forma, altura de encías” El Diseño de Sonrisa cuenta con una suma de procedimientos y trabajo interdisciplinario que nos permitirán lograr una simetría de balance, funcionalidad y armonía para
+                            lograr la mejor estética ideal. </p>
+                        <div class="card-footer ">
+                            <small class="text-muted "> </small>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col ">
+                <div class="card card border-light mb-3 ">
+                    <img src=" " class="card-img-top " alt="... ">
+                    <div class="card-body ">
+                        <h5 class="card-title ">IMPLANTES</h5>
+                        <p class="card-text ">“El arte de Reemplazar un diente perdido” Los implantes están hechos de aleaciones de titanio (específicamente titanio, aluminio, vanadio) con diferentes grados de pureza, que se colocarán en los huesos de los maxilares debajo
+                            de las encías. Es muy importante aquí su posición, espacio y conceptualización estética. </p>
+                        <div class="card-footer ">
+                            <small class="text-muted "> </small>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col ">
+                <div class="card card border-light mb-3 ">
+                    <img src=" " class="card-img-top " alt="... ">
+                    <div class="card-body ">
+                        <h5 class="card-title ">PERIODONCIA </h5>
+                        <p class="card-text ">“Uno es lo que decide ser” Nuestras fases higiénicas (Limpiezas) y tratamientos (modificación de encías) de esta especialidad son realizados por profesionales especialistas en periodoncia. Son el primer paso para cuidar tu salud
+                            oral. </p>
+                        <div class="card-footer ">
+                            <small class="text-muted e "> </small>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+    <section class="py-5 text-center container ">
+        <div class="row row-cols-1 row-cols-md-3 g-4 ">
+            <div class="col ">
+                <div class="card card border-light mb-3 ">
+                    <img src=" " class="card-img-top " alt="... ">
+                    <div class="card-body ">
+                        <h5 class="card-title ">ORTODONCIA</h5>
+                        <p class="card-text ">“Mover cuesta pensar” Nada puede estar dado al azar en los movimientos de los dientes. Por eso contamos con un equipo de especialistas que te ayudarán a decidir el tipo de brackets o caso que más se ajuste a tu necesidad. </p>
+                        <div class="card-footer ">
+                            <small class="text-muted "> </small>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col ">
+                <div class="card card border-light mb-3 ">
+                    <img src=" " class="card-img-top " alt="... ">
+                    <div class="card-body ">
+                        <h5 class="card-title ">BLANQUEAMIENTO DENTAL</h5>
+                        <p class="card-text ">“Me gusta el blanco en todo menos en los dientes” Aclaramos la tonalidad de los dientes causada por pigmentaciones o por manchas causadas por medicamentos, traumas dentales, alimentos y bebidas oscuras entre otros.
+                        </p>
+                        <div class="card-footer ">
+                            <small class="text-muted "> </small>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col ">
+                <div class="card card border-light mb-3 ">
+                    <img src=" " class="card-img-top " alt="... ">
+                    <div class="card-body ">
+                        <h5 class="card-title ">CIRUJIA </h5>
+                        <p class="card-text "> “Modificar formas y función para una estética Ideal” Se encarga de la prevención, diagnóstico, tratamiento y rehabilitación quirúrgica de las enfermedades, lesiones y defectos de los tejidos blandos y duros de la cavidad oral,
+                            maxilar superior, maxilar inferior y la cara.
+                        </p>
+                        <div class="card-footer ">
+                            <small class="text-muted e "> </small>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+    <section class="py-5 text-center container ">
+        <div class="row row-cols-1 row-cols-md-3 g-4 ">
+            <div class="col ">
+                <div class="card card border-light mb-3 ">
+                    <img src=" " class="card-img-top " alt="... ">
+                    <div class="card-body ">
+                        <h5 class="card-title "> ODONTOPEDEDIATRIA </h5>
+                        <p class="card-text "> “Modificar formas y función para una estética Ideal” Cuidado oral primario, preventivo y terapéutico de tus hijos (Hasta los 12 años) Odontopediatría, Ortopedia Maxilar y Ortodoncia
+                        </p>
+                        <div class="card-footer ">
+                            <small class="text-muted "> </small>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col ">
+                <div class="card card border-light mb-3 ">
+                    <img src=" " class="card-img-top " alt="... ">
+                    <div class="card-body ">
+                        <h5 class="card-title "> PROTESIS DENTAL</h5>
+                        <p class="card-text ">“Modificar formas y función para una estética Ideal” Hace parte de Rehabilitación Oral de tu sonrisa. Son tratamientos estéticos y funcionales que te ayudarán a recuperar la forma, ángulos, colores y longitud de tus dientes, de
+                            acuerdo a tu rostro y labios. Prótesis y Coronas son los más comunes.
+                        </p>
+                        <div class="card-footer ">
+                            <small class="text-muted "> </small>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col ">
+                <div class="card card border-light mb-3 ">
+                    <img src=" " class="card-img-top " alt="... ">
+                    <div class="card-body ">
+                        <h5 class="card-title "> </h5>
+                        <p class="card-text "> </p>
+                        <div class="card-footer ">
+                            <small class="text-muted e "> </small>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+
+
+    <footer id="seccion-contacto " class="d-flex align-items-center justify-content-center" style="background: rgb(150, 150, 150, 0.7)">
+        <div id="bg-contactos" class="position-absolute">
+            <div class="w-100  ">
+                <p class="fs-5 px-3 pt-3 text-secondary">Sonrisas.SA &copy; Todos Los Derechos Reservados 2021</p>
+                <div id="iconos ">
+                    <a href="# "><i class="bi bi-facebook "><s></s></i></a>
+                    <a href="# "><i class="bi bi-twitter "></i></a>
+                    <a href="# "><i class="bi bi-instagram "></i></a>
+                </div>
+            </div>
+        </div>
+        <svg xmlns="http://www.w3.org/2000/svg " viewBox="0 0 1440 320 ">
+            <path fill="#1b2a4e " fill-opacity="1 " d="M0,32L120,42.7C240,53,480,75,720,74.7C960,75,1200,53,1320,42.7L1440,32L1440,320L1320,320C1200,320,960,320,720,320C480,320,240,320,120,320L0,320Z ">
+
+            </path>
+        </svg>
+    </footer>
+    <!--Footer-->
+</body>
+
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 </body>
