--- a/Html/comentarios.html
+++ b/Html/comentarios.html
@@ -11,9 +11,10 @@
 </head>
 
 <body>
+    <!--Nav-->
     <nav class="navbar navbar-expand-lg border navbar-light bg-light" id="menu">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="../Index.html">
                 <spam class="text-primary fs-5 fw-bold ">Sonrisas</spam>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,7 +33,7 @@
                             <a class="nav-link " href="../Html/sedes.html">Sedes</a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link " href="../Html/quienessomos.html">¿Quienes Somos?</a>
+                            <a class="nav-link " href="../Html/quienessomos.html">Nosotros</a>
                         </li>
                         <li class="nav-item ">
                             <a class="nav-link " href="../Html/comentarios.html">Comentarios</a>
@@ -48,71 +49,145 @@
             </div>
         </div>
     </nav>
+    <!--Nav-->
+    <!--Seccion de Comentarios-->
     <section class="py-5 text-center container">
 
         <h1 class="display-4 font-weight-normal text-white bg-primary rounded pb-md-2">Comentarios</h1>
-        <div class=" border position-relative overflow-hidden pb-md-2 m-md-1 text-center bg-light" id="box">
+        <div class=" border position-relative overflow-hidden pb-md-2 m-md-1 text-center bg-light">
             <div class=" texto1 col-md-5 p-lg-5 mx-auto my-5">
+                <h5 class="text-primary">¡Comparte tu opinión con nosotros! </h5>
                 <p class=" text-justify  text-primary  ">
-                    comparte aqui los que opines de nosotros. <br> parte cualquier opinion que tengas sea para mejorar nuestro servicio o para criticar nuestros servision, somos gente muy flexibles.
+                    Recuerda que tus comentarios nos ayudan a mejorar y nos motivan a esforzarnos para seguir ofreciendo una atención inmejorable. ¿Nos dejas tu opinión? Solo tienes que hacer click en el boton de abajo. ¡Apenas te llevará unos instantes y será de gran utilidad
+                    para nosotros!
                 </p>
-                <h5 class="text-primary">!OPINA</h5>
-            </div>
-            <!--Intro-->
 
+            </div>
     </section>
-    <div class="container-lg p-3 " style="background: rgb(150, 150, 150, 0.7)">
+    <div class="container-lg p-3 " style="background:rgb(13, 110, 253) ">
         <div class="col card mb-4 shadow p-3 mb-5 bg-body rounded">
             <div class="d-flex justify-content-between">
                 <div class="d-flex flex-row align-items-center">
                     <img src="../Img/comentario1.jpg" alt="" width="25" height="25" />
-                    <p class="small ms-2">Randie</p>
+                    <p class="small ms-2">Annette</p>
                 </div>
                 <div class="d-flex flex-row align-items-center">
-                    <p class="small text-muted">10/12/2017</p>
+                    <p class="small text-muted">10/12/2021</p>
                 </div>
             </div>
-            <p class="mb-0">me parece que podrian agregar un servicio a domicilio</p>
+            <p class="mb-0">Mi esposo se sometió a una restauración bucal completa, el doctor ue muy minucioso y tranquilizador, explicando cada paso a medida que avanzaban en el tratamiento.</p>
         </div>
         <div class="card mb-4 shadow p-3 mb-5 bg-body rounded">
             <div class="d-flex justify-content-between">
                 <div class="d-flex flex-row align-items-center">
                     <img src="../Img/comentario4.jpg" alt="" width="25" height="25" />
-                    <p class="small ms-2">susie</p>
+                    <p class="small ms-2">Catherine</p>
                 </div>
                 <div class="d-flex flex-row align-items-center">
-                    <p class="small text-muted">13/5/2010</p>
+                    <p class="small text-muted">13/5/2021</p>
                 </div>
             </div>
-            <p class="mb-0">el otro dia no me gusto el servicio que ofrecieron, tan mal fue el servicio que vomite</p>
+            <p class="mb-0">Acabo de terminar con mis problemas de mandíbula superior con el Dr Fue extremadamente profesional y explicó exactamente lo que estaba a punto de hacer antes de cada procedimiento.</p>
         </div>
         <div class="card mb-4 shadow p-3 mb-5 bg-body rounded">
             <div class="d-flex justify-content-between">
                 <div class="d-flex flex-row align-items-center">
                     <img src="../Img/comentario2.jpg" alt="" width="25" height="25" />
-                    <p class="small ms-2">kris</p>
+                    <p class="small ms-2">William</p>
                 </div>
                 <div class="d-flex flex-row align-items-center">
                     <p class="small text-muted">17/07/2021</p>
                 </div>
             </div>
-            <p class="mb-0">mi amigo gaster me recomendeo este sitio, y me quede apañado</p>
+            <p class="mb-0">El servicio brindado para la limpieza bucal y revisión fue muy profesional y amable. Tienen protocolos ante el COVID-19 bastante robustos.
+
+            </p>
         </div>
 
         <div class="card mb-4 shadow p-3 mb-5 bg-body rounded">
             <div class="d-flex justify-content-between">
                 <div class="d-flex flex-row align-items-center">
                     <img src="../Img/comentario3.gif" alt="" width="25" height="25" />
-                    <p class="small ms-2">Ralsei</p>
+                    <p class="small ms-2">Terrie</p>
                 </div>
                 <div class="d-flex flex-row align-items-center">
                     <p class="small text-muted">17/07/2021</p>
                 </div>
             </div>
-            <p class="mb-0">ni en el mundo oscuro me dejaron los dientes tan limpios, me pregunto si tambien pueden blanquear cuernos</p>
+            <p class="mb-0">Terrie, Kate y yo queremos agradecer a Sonrisas por la fantástica atención que hemos recibido. </p>
         </div>
     </div>
+    </section>
+    <!--Seccion de Comentarios-->
+    <!--Boton-->
+    <section class="py-5 text-center container">
+        <button type="button " class="btn btn-primary " data-bs-toggle="modal " data-bs-target="#exampleModal " data-bs-whatever="@mdo ">DEJANOS TU OPINION</button>
+    </section>
+    <!--Boton-->
+    <!--Testimonios-->
+    <section class="py-3 text-center container ">
+        <h1 class="display-4 font-weight-normal text-white bg-primary rounded pb-md-2 ">TESTIMONIOS</h1>
+    </section>
+    <h4 class="text-center">Conoce la experiencia de nuestros pacientes</h4>
+    <div class=" " style="background-image: url(' ');">
+        <section class="py-3 text-center container ">
+            <div class="row">
+                <div class="col-md-8 ml-auto mr-auto text-center">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <div class="card  ">
+                        <div class="card">
+                            <img class="img " src=" " title="">
+                        </div>
+                        <div class="card-body">
+                            <h3 class="card-title">
+                                <strong>Kirbo:</strong>
+                            </h3>
+                            <h6 class="text-primary">REHABILITACIÓN ORAL</h6>
+                            <p class="card">Estoy muy contento porque yo no veía solución. Hay gente que dice que Sonrisas es pura fama, pero yo te puedo decir que no es fama Son profesionalismo</p>
+                            <div class="card-footer">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card ">
+                        <div class="card">
+                            <img class="img " src=" " title="">
+                        </div>
+                        <div class="card-body">
+                            <h4 class="card-title"><strong>Carlos Niño:</strong></h4>
+                            <h6 class="text-primary">REHABILITACIÓN ORAL</h6>
+                            <p class="card">He mejorado muchísimo porque puedo sonreír con mayor tranquilidad, puedo hablar, cantar, todo lo que implica interactuar con otras personas. A mí siempre que me preguntan por procedimientos odontológicos yo siempre hablo de
+                                mi consultorio favorito Sonrisas</p>
+                            <div class="card-footer">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card ">
+                        <a data-target="#testimoniovideo2" data-toggle="modal">
+                            <div class="card">
+                                <img class="img " src=" " title="">
+                            </div>
+                            <div class="card-body">
+                                <h4 class="card-title"><strong>Sherry y Mike Miller:</strong></h4>
+                                <h6 class="categor text-primary">REHABILITACIÓN ORAL</h6>
+                                <p class="card">Mi esposo y yo creemos que tenemos un mejor servicio aquí. Los doctores han sido absolutamente maravillosos. Estamos totalmente satisfechos con las facilidades y el servicio</p>
+                                <div class="card-footer">
+                                </div>
+                            </div>
 
+                    </div>
+                </div>
+            </div>
+    </div>
+    </div>
+    <!--Testimonios-->
+    <!--Footer-->
     <footer id="seccion-contacto " class="d-flex align-items-center justify-content-center" style="background: rgb(150, 150, 150, 0.7)">
         <div id="bg-contactos" class="position-absolute">
             <div class="w-100  ">
@@ -123,8 +198,6 @@
                     <a href="# "><i class="bi bi-instagram "></i></a>
                 </div>
             </div>
-
-
         </div>
         <svg xmlns="http://www.w3.org/2000/svg " viewBox="0 0 1440 320 ">
             <path fill="#1b2a4e " fill-opacity="1 " d="M0,32L120,42.7C240,53,480,75,720,74.7C960,75,1200,53,1320,42.7L1440,32L1440,320L1320,320C1200,320,960,320,720,320C480,320,240,320,120,320L0,320Z ">
@@ -132,6 +205,7 @@
             </path>
         </svg>
     </footer>
+    <!--Footer-->
 </body>
 
 </html>
